--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1_bevezetes_nodejs",
+  "name": "CarService",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -7,12 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "nodejs",
-    "prf",
-    "gyakorlat",
-    "oktatas"
   ],
-  "author": "Szabó Zoltán",
+  "author": "Vivien Voros",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
