--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@angular/animations": "^15.2.0",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
+    "@angular/core": "^15.2.5",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.8",
     "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/platform-browser-dynamic": "^15.2.8",
     "@angular/router": "^15.2.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
